# Enterprise-AI-Assistant

./: README.md  main.py  pyproject.toml
app/api/: routes.py
app/data/: employees.json  tickets.json
app/graph/: assistant_graph.py
app/llm/: client.py
app/prompts/: system_prompt.py
app/state/: assistant_state.py
app/tools/: employee_tool.py  report_tool.py  ticket_tool.py
